# silicon.nvim

./: .editorconfig  .gitignore  Cargo.toml  LICENSE  README.md  build.rs  install.sh  test.sh
.github/: FUNDING.yml
.github/workflows/: autogen.yml  ci.yml  release.yml
doc/: silicon.txt
src/: clipboard.rs  config.rs  error.rs  lib.rs  utils.rs
