[package]
name = "silicon_nvim"
version = "0.3.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "silicon"
crate-type = ["cdylib"]

[dependencies]
anyhow = "1"
tempfile = "3"
nvim-oxi = { version = "0.2.2", features = ["neovim-nightly"]  }
serde = { version = '1.0', features = ["derive"] }
silicon = { version = '0', default-features = false }

[dependencies.syntect]
version = "4.4"
default-features = false
features = ["parsing", "dump-load", "regex-onig"]

[target.'cfg(target_os = "macos")'.dependencies]
pasteboard = "0.1.3"

[target.'cfg(target_os = "windows")'.dependencies]
clipboard-win = "4.0.2"
image = { version = "0.23", default-features = false, features = ["jpeg", "bmp", "jpeg_rayon"] }

[dependencies.image]
version = "0.23"
default-features = false
features = ["jpeg", "png", "jpeg_rayon"]
