[package]
name = "silicon_nvim"
version = "0.5.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "silicon"
crate-type = ["cdylib"]

[dependencies]
anyhow = "1"
tempfile = "3"
nvim-oxi = { version = "0.4.2", features = ["neovim-nightly"]  }
serde = { version = '1.0', features = ["derive"] }
silicon = { version = '0.5', default-features = false, features = ["anyhow"] }
time = { version = "0.3", features = ["formatting", "local-offset"] }
thiserror = "1.0.40"

[dependencies.syntect]
version = "5.0"
default-features = false
features = ["parsing", "dump-load", "regex-onig"]

[target.'cfg(target_os = "macos")'.dependencies]
pasteboard = "0.1.3"

[target.'cfg(target_os = "windows")'.dependencies]
clipboard-win = "4.0.2"
image = { version = "0.24", default-features = false, features = ["jpeg", "bmp", "jpeg_rayon"] }

[dependencies.image]
version = "0.24"
default-features = false
features = ["jpeg", "png", "jpeg_rayon"]

[patch.crates-io]
nvim-oxi = { git = "https://github.com/noib3/nvim-oxi", rev = "51dd4734" }
silicon = { git = "https://github.com/Aloxaf/silicon" }